tests/models/enum/named/usize/pass/gt.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(gt = 2)]
        value: usize
    },
}
fn main() {}
