tests/models/enum/named/usize/fail/expected.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(expected = "val")]
        usize
    ),
}
fn main() {}
